[gd_scene load_steps=10 format=2]

[ext_resource path="res://User Interface/Background.png" type="Texture" id=1]
[ext_resource path="res://User Interface/Styles/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Common/Fonts/Montserrat-Regular-20.tres" type="DynamicFont" id=3]
[ext_resource path="res://Common/Fonts/Montserrat-Regular-12.tres" type="DynamicFont" id=4]
[ext_resource path="res://Common/Fonts/Montserrat-Regular-30.tres" type="DynamicFont" id=5]
[ext_resource path="res://TextureSets/Faces/Basic/tile0.png" type="Texture" id=6]
[ext_resource path="res://User Interface/Menus/Game Configuration/GameConfigurationOptions.gd" type="Script" id=7]
[ext_resource path="res://User Interface/Menus/Game Configuration/CardFaceSelection.gd" type="Script" id=8]
[ext_resource path="res://User Interface/Menus/Game Configuration/CardBackSelection.gd" type="Script" id=11]

[node name="GameConfiguration" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 250
custom_constants/margin_top = 20
custom_constants/margin_left = 250
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_left = 250.0
margin_top = 20.0
margin_right = 774.0
margin_bottom = 580.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 524.0
margin_bottom = 486.0
size_flags_horizontal = 7
alignment = 1

[node name="GameConfigurationLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 524.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 5 )
text = "Game Configuration"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 524.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberOfCardsContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 524.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/NumberOfCardsContainer"]
margin_right = 260.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Number of Cards"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/NumberOfCardsContainer"]
margin_left = 264.0
margin_right = 524.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
step = 2.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 524.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardFaceSelectionLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 524.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 3 )
text = "Card Face Selection"

[node name="CardFaceSelection" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 524.0
margin_bottom = 252.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer/CardFaceSelection"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 6 )
expand = true

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/CardFaceSelection"]
margin_left = 132.0
margin_right = 196.0
margin_bottom = 128.0
columns = 10

[node name="TextureButton" type="TextureButton" parent="MarginContainer/ScrollContainer/VBoxContainer/CardFaceSelection/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
toggle_mode = true
texture_normal = ExtResource( 6 )
expand = true

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 524.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBackSelectionLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 524.0
margin_bottom = 290.0
custom_fonts/font = ExtResource( 3 )
text = "Card Back Selection"

[node name="CardBackSelection" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 524.0
margin_bottom = 422.0
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ScrollContainer/VBoxContainer/CardBackSelection"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 6 )
expand = true

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/CardBackSelection"]
margin_left = 132.0
margin_right = 196.0
margin_bottom = 128.0
columns = 10

[node name="TextureButton" type="TextureButton" parent="MarginContainer/ScrollContainer/VBoxContainer/CardBackSelection/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
toggle_mode = true
texture_normal = ExtResource( 6 )
expand = true

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 426.0
margin_right = 524.0
margin_bottom = 430.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 524.0
margin_bottom = 466.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/ButtonsContainer"]
margin_right = 104.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="StartButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/ButtonsContainer"]
margin_left = 108.0
margin_right = 524.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = ExtResource( 3 )
text = "Start Game"

[node name="ErrorMessageLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 470.0
margin_right = 524.0
margin_bottom = 486.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Error message"
